@@ -118,6 +118,9 @@ HISTORY
   ++ Bugfixes:
 
   2014-09-02: Simon Goldschmidt
+  * sockets.c: fixed bug #42117 lwip_fcntl does not set errno
+
+  2014-09-02: Simon Goldschmidt
   * tcp.c: fixed bug #42299 tcp_abort() leaves freed pcb on tcp_bound_pcbs list
 
   2014-08-20: Simon Goldschmidt
